WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94608
[BlackBerry] Accelerated In-Region Scrolling does not render correctly on rotation
https://bugs.webkit.org/show_bug.cgi?id=94608
Summary
[BlackBerry] Accelerated In-Region Scrolling does not render correctly on rot...
Antonio Gomes
Reported
2012-08-21 09:46:52 PDT
PR #194754 Steps to reproduce: 1) Rotate device to landscape 2) open overflow menu 3) scroll to the bottom of the menu 4) rotate to portrait The content of the menu stays on the top half of screen, but touch event goes to correct position.
Attachments
(committed r126167) patch
(3.35 KB, patch)
2012-08-21 10:03 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-08-21 10:03:45 PDT
Created
attachment 159710
[details]
(committed
r126167
) patch
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug