[BlackBerry] Accelerated In-Region Scrolling does not render correctly on rotation https://bugs.webkit.org/show_bug.cgi?id=94608 PR #194754

Reviewed by Goerge Staikos.
Patch by Antonio Gomes <agomes@rim.com>

When one translates/scrolls a HW accelerated scrollable layer, it makes use of
the OVERRIDE mechanism. Suppose the following scenario:

- In landscape, the overflow menu is scrollable. Then the user scrolls it so
that is has scroll position of 0, -100.
- when he rotates to portrait, the menus fit well to the available space but it
still has the OVERRIDE set, so it keeps the layer translated at 0, -100.

Fix is simple: clear the override when we stop scrolling a HW accelerated layer,
when we destroy the objects.

* WebKitSupport/InRegionScrollableArea.cpp:
(BlackBerry::WebKit::InRegionScrollableArea::~InRegionScrollableArea):

git-svn-id: svn://svn.chromium.org/blink/trunk@126167 bbb929c8-8fbe-4397-9dbb-9b2b20218538