third_party/WebKit/Source/WebKit/blackberry/WebKitSupport/InRegionScrollableArea.cpp
@@ -43,6 +43,8 @@ InRegionScrollableArea::InRegionScrollableArea()
 
 InRegionScrollableArea::~InRegionScrollableArea()
 {
+    if (m_cachedCompositedScrollableLayer)
+        m_cachedCompositedScrollableLayer->clearOverride();
 }
 
 InRegionScrollableArea::InRegionScrollableArea(WebPagePrivate* webPage, RenderLayer* layer)
